--- a/01 - JavaScript Drum Kit/index-FINISHED.html
+++ b/01 - JavaScript Drum Kit/index-FINISHED.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <audio data-key="65" src="http://peal.io/download/arfy8"></audio>
+  <audio data-key="65" src="http://peal.io/download/pjelo"></audio>
   <audio data-key="83" src="http://peal.io/download/pjelo"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
   <audio data-key="70" src="sounds/openhat.wav"></audio>
