--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -19,43 +19,43 @@
     </div>
     <div data-key="68" class="key">
       <kbd>D</kbd>
-      <span class="sound">kick</span>
+      <span class="sound">Boi</span>
     </div>
     <div data-key="70" class="key">
       <kbd>F</kbd>
-      <span class="sound">openhat</span>
+      <span class="sound">Wii</span>
     </div>
     <div data-key="71" class="key">
       <kbd>G</kbd>
-      <span class="sound">boom</span>
+      <span class="sound">Watch your profanity</span>
     </div>
     <div data-key="72" class="key">
       <kbd>H</kbd>
-      <span class="sound">ride</span>
+      <span class="sound">Boom</span>
     </div>
     <div data-key="74" class="key">
       <kbd>J</kbd>
-      <span class="sound">snare</span>
+      <span class="sound">Cleveland</span>
     </div>
     <div data-key="75" class="key">
       <kbd>K</kbd>
-      <span class="sound">tom</span>
+      <span class="sound">Hot</span>
     </div>
     <div data-key="76" class="key">
       <kbd>L</kbd>
-      <span class="sound">tink</span>
+      <span class="sound">Box</span>
     </div>
   </div>
 
   <audio data-key="65" src="http://peal.io/download/pjelo"></audio>
   <audio data-key="83" src="http://peal.io/download/0vku4"></audio>
-  <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="68" src="http://peal.io/download/2mk5e"></audio>
+  <audio data-key="70" src="http://peal.io/download/44702"></audio>
+  <audio data-key="71" src="http://peal.io/download/ejwor"></audio>
+  <audio data-key="72" src="http://peal.io/download/6ssqw"></audio>
+  <audio data-key="74" src="http://peal.io/download/l62j7"></audio>
+  <audio data-key="75" src="http://peal.io/download/rfgqb"></audio>
+  <audio data-key="76" src="http://peal.io/download/hy82a"></audio>
 
 <script>
   function playSound(e){
